<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="Hai, Sobat Awake!"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.121"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="192dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/notifhome"
                app:layout_constraintStart_toEndOf="@+id/welcomessage"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="342dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/search_view_background"
                android:iconifiedByDefault="false"
                android:queryHint="Pencarian"
                app:layout_constraintBottom_toTopOf="@id/viewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomessage"
                app:theme="@style/CustomSearchView"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="342dp"
                android:layout_height="163dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchView" />

            <TextView
                android:id="@+id/textKategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/viewPager"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="324dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <GridLayout
                android:id="@+id/iconGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="2"
                app:layout_constraintTop_toBottomOf="@id/textKategori"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/restareaicon"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/rest_area_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rest_area"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/alertlebelicon"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/alert_level_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_level"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/guide_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guide"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/street_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/livecamicon"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/livecam"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Live Cam"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/fakta_unik_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fakta_unik"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/history_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:padding="10dp"
                        android:src="@drawable/dashboard_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard"
                        android:gravity="center"
                        android:paddingTop="4dp"/>
                </LinearLayout>

            </GridLayout>

            <TextView
                android:id="@+id/selengkapnyahome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="32dp"
                android:text="Selengkapnya"
                android:textColor="@color/kuning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconGrid" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/selengkapnyahome"
                tools:ignore="MissingConstraints"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
